--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ navigation:
   - Projects/index.md
   - Thoughts/index.md
   - Interests/index.md
-  # - about.md
+  - HarshMaheshwari_CV.pdf
 
 # comments:
 #   disqus: "disqus-contrast"
