index.md for resume

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ navigation:
   - Projects/index.md
   - Thoughts/index.md
   - Interests/index.md
-  - Resume/index.html
+  - Resume/index.md
 
 # comments:
 #   disqus: "disqus-contrast"
