--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ navigation:
   - Thoughts/index.md
   - Interests/index.md
   - Resume/index.md
+  links:
+    -file: "/HarshMaheshwari_CV.pdf"
 
 # comments:
 #   disqus: "disqus-contrast"
