--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ links: # see http://fontawesome.io/icons/#brand for all possible icons
   - linkedin: "https://www.linkedin.com/in/harsh-maheshwari-650039110/"
   - github: "https://github.com/harshm121/"
   - envelope: "mailto:harshm121@gmail.com"
+  - medium: "https://medium.com/@harshm121"
   # - file: "/HarshMaheshwari_CV.pdf"
   # - facebook: "https://www.facebook.com/harshrmaheshwari/"
 
