--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ links: # see http://fontawesome.io/icons/#brand for all possible icons
   - github: "https://github.com/harshm121/"
   - envelope: "mailto:harshm121@gmail.com"
   - medium: "https://medium.com/@harshm121"
+  - instagram: "https://www.instagram.com/harsh.maheshwari_/"
   # - file: "/HarshMaheshwari_CV.pdf"
   # - facebook: "https://www.facebook.com/harshrmaheshwari/"
 
