--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ style:
 navigation:
   - index.md
   - Projects/index.md
-  - Thoughts/index.md
+  - Articles/index.md
   - Interests/index.md
   - Resume/index.md
 
