--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ navigation:
   - Projects/index.md
   - Articles/index.md
   - Interests/index.md
-  - CV/index.md
+  - CV//PDFs/HarshMaheshwari_CV.pdf
 
 # comments:
 #   disqus: "disqus-contrast"
