--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink: pretty
 excerpt_separator: "\n\n\n" # two blank lines
 
 style:
-  minimalist: false
+  minimalist: true
   dark: false
 
 navigation:
