--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,17 @@
 title: "Harsh Maheshwari"
-author: "Harsh Maheshwari"
+# author: "Harsh Maheshwari"
+author:
+  name: "Your Name"
+  avatar: "/assets/images/bio-photo.jpg"
+  bio: "I am an **amazing** person." # Note: Markdown is allowed
+  location: "Somewhere"
+  links:
+    - label: "Made Mistakes"
+      icon: "fas fa-fw fa-link"
+      url: "https://mademistakes.com"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/mmistakes"
 description: ""
 markdown: "kramdown"
 more: "read more »"
