--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navigation:
 
 links: # see http://fontawesome.io/icons/#brand for all possible icons
   - linkedin: "https://www.linkedin.com/in/harsh-maheshwari-650039110/"
-  - resume_google_scholar_url: "https://scholar.google.com/citations?user=fs01uyQAAAAJ&hl=en&oi=ao"
+  - ai-google-scholar: "https://scholar.google.com/citations?user=fs01uyQAAAAJ&hl=en&oi=ao"
   - github: "https://github.com/harshm121/"
   - envelope: "mailto:harshm121@gmail.com"
   - medium: "https://medium.com/@harshm121"
