--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ social-network-links:
   - envelope: "mailto:harshm121@gmail.com"
   
 links: # see http://fontawesome.io/icons/#brand for all possible icons
-  - user-graduate: "https://scholar.google.com/citations?user=fs01uyQAAAAJ&hl=en&oi=ao"
+  - graduate: "https://scholar.google.com/citations?user=fs01uyQAAAAJ&hl=en&oi=ao"
   - linkedin: "https://www.linkedin.com/in/harsh-maheshwari-650039110/"
   - github: "https://github.com/harshm121/"
   - envelope: "mailto:harshm121@gmail.com"
