--- a/_config.yml
+++ b/_config.yml
@@ -23,17 +23,13 @@ navigation:
 # comments:
 #   disqus: "disqus-contrast"
 # #  isso: "comments.mysite.org"
-social-network-links:
-  - linkedin: "https://www.linkedin.com/in/harsh-maheshwari-650039110/"
-  - github: "https://github.com/harshm121/"
-  - envelope: "mailto:harshm121@gmail.com"
-  
+
 links: # see http://fontawesome.io/icons/#brand for all possible icons
   - user-graduate: "https://scholar.google.com/citations?user=fs01uyQAAAAJ&hl=en&oi=ao"
   - linkedin: "https://www.linkedin.com/in/harsh-maheshwari-650039110/"
   - github: "https://github.com/harshm121/"
   - envelope: "mailto:harshm121@gmail.com"
-#   - medium: "https://medium.com/@harshm121"
+  - medium: "https://medium.com/@harshm121"
   - twitter: "https://twitter.com/harsh_m121"
   - instagram: "https://www.instagram.com/harsh.maheshwari_/"
   - file: "/PDFs/HarshMaheshwari_CV.pdf"
