--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ style:
 
 navigation:
   - index.md
+  - Publications/index.md
   - Projects/index.md
   - Articles/index.md
   - Interests/index.md
